forum overflow mobile fix

--- a/index.css
+++ b/index.css
@@ -190,3 +190,8 @@ footer {
     max-height: 45vw;
   }
 }
+
+#forum-wrapper{
+  width: 100%;
+  overflow: hidden;
+}
